﻿svs 24.02.2016 09:40:36 +0300 - build 4561

1. SQLite 3.11.0

drkns 23.02.2016 19:46:47 +0200 - build 4560

1. 0003185: Panel in unsorted mode is showing the first file/folder as the last

drkns 20.02.2016 22:01:11 +0200 - build 4559

1. gcc build fix.

drkns 20.02.2016 21:53:30 +0200 - build 4558

1. Продолжение 4548: обрабатываем все исключения единообразно.

drkns 20.02.2016 15:56:08 +0200 - build 4557

1. Продолжение 4548: показываем более правильный стек на x86, показываем source file/line в стеке и в основном диалоге.

2. В UnquoteExternal() учтём прямой слеш тоже.

w17 20.02.2016 15:03:22 +0300 - build 4556

1. Уточнение 4523. Учтём "D:\Path Name"\ в UnquoteExternal()

drkns 20.02.2016 04:16:03 +0200 - build 4555

1. Продолжение 4548: загружаем pdb только тогда, когда нужно.

drkns 19.02.2016 21:58:30 +0200 - build 4554

1. Уточнение 4552.

2. VC2015 warning.

w17 19.02.2016 22:31:34 +0300 - build 4553

1. Уточнение 4552, восстановление сборки VS2010.

drkns 19.02.2016 00:08:34 +0200 - build 4552

1. Еще раз на тему Alt+F8 во вьювере:
   - наличие %, h, 0x etc. в строке больше не меняет запомненный режим;
   - модификатор d, указанный в справке, не работал в принципе.
     Что прелестно - он и не мог работать, т. к., например, 1234d - валидное hex-число.
     Поэтому для явного указания "это decimal" теперь используется модификатор 'm'.
   - все модификаторы (кроме %) теперь работают и для задания левой позиции.
   - в диалог добавлены кнопки Ok/Cancel.

drkns 17.02.2016 19:43:48 +0200 - build 4551

1. После 4525 текст команды в user screen отображался не тем цветом.

drkns 14.02.2016 20:45:46 +0200 - build 4550

1. Вместо "Language data is incorrect or damaged" показываем "filename.lng: language data is incorrect or damaged" дабы не гадать, что там за файл.

2. Текст во всех исключениях, унаследованных от std::exception, трактуется как UTF-8.

drkns 14.02.2016 13:00:58 +0200 - build 4549

1. Восстановим сообщение об ошибке импорта XML.
