@@ -1,4 +1,8 @@
-﻿svs 24.02.2016 09:40:36 +0300 - build 4561
+﻿drkns 25.02.2016 18:04:48 +0200 - build 4562
+
+1. 0003187: Symlink на сетевой каталог не работает после редактирования целевого каталога в диалоге атрибутов
+
+svs 24.02.2016 09:40:36 +0300 - build 4561
 
 1. SQLite 3.11.0
 
